[package]
name = "usdz"
version = "0.0.0"
edition = "2021"
authors = ["Richard Anaya"]
description = "USDZ file format parser"
repository = "https://github.com/richardanaya/usdz.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
